--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nf start -p 3000",
+    "start": "nf start",
     "lint": "eslint ./src",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -51,6 +51,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "foreman": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "husky": "^1.0.0-rc.13",
@@ -58,6 +59,7 @@
     "jest": "^23.4.2",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
+    "nodemon": "^1.18.3",
     "path": "^0.12.7",
     "prettier": "1.13.7",
     "prettier-eslint": "^8.8.2",
