--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/jpreecedev/express-graphql-scratch#readme",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.54",
+    "@babel/node": "^7.0.0-beta.54",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
     "@babel/plugin-syntax-class-properties": "^7.0.0-beta.54",
@@ -72,9 +73,13 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "apollo-client": "^2.3.7",
+    "apollo-server-express": "^2.0.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "react": "^16.4.1",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1"
   },
   "browserslist": {
