--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.3.0-beta.6",
     "apollo-client": "^2.3.7",
+    "apollo-link-http": "^1.5.4",
     "apollo-server-express": "^2.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
