--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "husky": "^1.0.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.2",
+    "jsdom": "^11.12.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
